# Engineering-Intelligence-Showcase

./: .gitignore  README.md  app.py  main.py  pyproject.toml  ui_shared.py
.streamlit/: config.toml
pages/: 02_AI_ORCHESTRATOR.py  03_SMART_GRID.py  04_SIGNAL_PROC.py  05_EN13001_TOOLS.py  06_SALES_AI.py  07_SOCIAL_MEDIA_AI.py
