[project]
name = "engineering-intelligence-showcase"
version = "0.1.0"
description = "Interactive showcase dashboard for engineering automation, AI orchestration, and data analytics projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "streamlit>=1.54.0",
]
